[package]
name = "lvmosaic"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ffmpeg-next = { version = "7", optional = true }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
crossbeam-channel = "0.5"

[features]
default = []
ffmpeg = ["ffmpeg-next"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
